@@ -311,3 +311,11 @@ in: |-
   <p><object width="340" height="280"><param name="movie" value="http://www.youtube.com/v/iUbK1cBHm6E"></param><param name="wmode" value="opaque"></param><param name="allowScriptAccess" value="sameDomain"></param><embed src="http://www.youtube.com/v/iUbK1cBHm6E" type="application/x-shockwave-flash" width="340" height="280" wmode="opaque" allowScriptAccess="sameDomain"></embed></object></p>
 html: |-
   <p><object width="340" height="280"><param name="movie" value="http://www.youtube.com/v/iUbK1cBHm6E"></param><param name="wmode" value="opaque"></param><param name="allowScriptAccess" value="sameDomain"></param><embed src="http://www.youtube.com/v/iUbK1cBHm6E" type="application/x-shockwave-flash" width="340" height="280" wmode="opaque" allowScriptAccess="sameDomain"></embed></object></p>
+---
+name: in code escaped properly
+in: "<pre><code>some <b>bold</b> text</code></pre>"
+html: "<pre><code>some &lt;b&gt;bold&lt;/b&gt; text</code></pre>"
+---
+name: in code with class attribute escaped properly
+in: "<pre><code class='myclass'>some <b>bold</b> text</code></pre>"
+html: "<pre><code class='myclass'>some &lt;b&gt;bold&lt;/b&gt; text</code></pre>"
